--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@
     text-align: left;
   }
 
-  .Resume {
+  .Material {
     margin-top: auto;
     margin-right: 25%;
     margin-left: 25%;
@@ -132,12 +132,12 @@
     margin-top: 10%;
   }
 
-  .Resume button {
-    background-color: darkgray;
-    padding: 10px 20px;
-    border-radius: 100px;
+  .Material h3 {
+    margin-top: 3%;
+    margin-bottom: 2%;
   }
 
+  
   .Resume a {
     text-decoration: none;
     color: #333;
@@ -251,7 +251,38 @@
         transform: translateX(-100%);
       }
     }
+
+    .Material {
+      margin-top: auto;
+      margin-right: 10%;
+      margin-left: 10%;
+      margin-bottom: 10%;
+      text-align: left;
+      margin-top: 10%;
+    }
   
+    .Material h3 {
+      margin-top: 3%;
+      margin-bottom: 2%;
+    }
+    
+    .About {
+      text-align: left;
+      margin-left: 10%;
+      margin-right: 10%;
+    }
+
+    .Education {
+      text-align: left;
+      margin-left: 10%;
+      margin-right: 10%;
+    }
+
+    .skill {
+      text-align: left;
+      margin-left: 10%;
+      margin-right: 10%;
+    }
 
   
   }
