--- a/styles.css
+++ b/styles.css
@@ -119,44 +119,13 @@
     text-align: left;
   }
 
-  .Material {
-    margin-top: auto;
-    margin-right: 25%;
-    margin-left: 25%;
-    margin-bottom: 10%;
-    text-align: left;
-    margin-top: 10%;
-  }
-
-  .Material h3 {
-    margin-top: 3%;
-    margin-bottom: 2%;
-  }
-
+  
   
   .Resume a {
     text-decoration: none;
     color: #333;
   }
 
-  .scrolling-text-container {
-    overflow: hidden;
-    width: 100%;
-  }
-  
-  .scrolling-text {
-    animation: scrolling 10s linear infinite;
-    white-space: nowrap;
-  }
-  
-  @keyframes scrolling {
-    0% {
-      transform: translateX(100%);
-    }
-    100% {
-      transform: translateX(-100%);
-    }
-  }
 
   .contact-email {
     text-align: center;
@@ -164,6 +133,8 @@
   
   .contact-email h3 {
     margin-bottom: 10px;
+    margin-top: 3%;
+    font-size: medium;
   }
   
   .contact-email a {
@@ -173,6 +144,10 @@
   
   .contact-email a:hover {
     color: #000;
+  }
+
+  hr {
+    margin-top: 10%;
   }
 
   @media screen and (max-width: 768px) {
@@ -204,7 +179,7 @@
       z-index: 999;
     }
 
-    navigasi ul {
+    .navigasi ul {
       list-style: inherit;
       padding: 0;
       margin-top: 20px;
@@ -233,34 +208,11 @@
       width: 100%;
       margin-top: 20px;
     }
-    
-    .scrolling-text {
-      animation: scrolling 10s linear infinite;
-      white-space: nowrap;
-    }
-    
-    @keyframes scrolling {
-      0% {
-        transform: translateX(100%);
-      }
-      100% {
-        transform: translateX(-100%);
-      }
-    }
 
-    .Material {
-      margin-top: auto;
-      margin-right: 10%;
-      margin-left: 10%;
-      margin-bottom: 10%;
-      text-align: left;
-      margin-top: 10%;
-    }
-  
-    .Material h3 {
-      margin-top: 3%;
-      margin-bottom: 2%;
-    }
+    .contact-email h3 {
+      margin-top: 5%;
+      font-size: medium;
+    }    
     
     .About {
       text-align: left;
@@ -279,7 +231,9 @@
       margin-left: 10%;
       margin-right: 10%;
     }
-
+    hr {
+      margin-top: 10%;
+    }
   
   }
 
