--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@
   
   .contact-email h3 {
     margin-bottom: 10px;
-    margin-top: 3%;
+    margin-top: 15px;
     font-size: medium;
   }
   
@@ -147,7 +147,7 @@
   }
 
   hr {
-    margin-top: 10%;
+    margin-top: 3%;
   }
 
   @media screen and (max-width: 768px) {
